[Fix] z-index 수정

--- a/frontend/dashboard/src/components/AnalyzeContent/AnalyzeContent.css
+++ b/frontend/dashboard/src/components/AnalyzeContent/AnalyzeContent.css
@@ -34,7 +34,7 @@
   background-color: transparent;
   position: relative;
   left: 20px;
-  z-index: 99;
+  z-index: 1;
 }
 
 .calendar-dropdown-menu {
